gbtrace/nohup.out
[07/Mar/2015 03:42:49] "GET /admin/ HTTP/1.0" 302 0
[07/Mar/2015 03:42:49] "GET /admin/login/?next=/admin/ HTTP/1.0" 200 1914
[07/Mar/2015 03:42:49] "GET /static/admin/css/base.css HTTP/1.0" 304 0
[07/Mar/2015 03:42:49] "GET /static/admin/css/login.css HTTP/1.0" 304 0
[07/Mar/2015 03:42:52] "POST /admin/login/?next=/admin/ HTTP/1.0" 302 0
[07/Mar/2015 03:42:52] "GET /admin/ HTTP/1.0" 200 3534
[07/Mar/2015 03:42:54] "GET /admin/auth/user/ HTTP/1.0" 200 6462
[07/Mar/2015 03:42:54] "GET /admin/jsi18n/ HTTP/1.0" 200 2372
[07/Mar/2015 03:42:57] "GET /admin/ HTTP/1.0" 200 3534
Performing system checks...

System check identified no issues (0 silenced).
March 07, 2015 - 03:42:30
Django version 1.7.3, using settings 'gbtrace.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CONTROL-C.
[07/Mar/2015 04:11:28] "GET /traceapp HTTP/1.0" 404 2032
[07/Mar/2015 04:11:33] "GET /traceapp/ HTTP/1.0" 404 2429
[07/Mar/2015 04:11:38] "GET /traceapp/upload/ HTTP/1.0" 200 2
[07/Mar/2015 04:11:47] "GET /traceapp/validate/ HTTP/1.0" 200 2
Performing system checks...

System check identified no issues (0 silenced).
March 07, 2015 - 04:11:17
Django version 1.7.3, using settings 'gbtrace.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CONTROL-C.
[07/Mar/2015 04:12:08] "GET /traceapp/validate/ HTTP/1.0" 200 11
[07/Mar/2015 04:12:15] "GET /traceapp/checkpoint/ HTTP/1.0" 200 13
[07/Mar/2015 04:12:22] "GET /traceapp/upload/ HTTP/1.0" 200 9
Performing system checks...

System check identified no issues (0 silenced).
March 07, 2015 - 04:12:06
Django version 1.7.3, using settings 'gbtrace.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CONTROL-C.
Performing system checks...

System check identified no issues (0 silenced).
March 07, 2015 - 04:12:39
Django version 1.7.3, using settings 'gbtrace.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CONTROL-C.
Traceback (most recent call last):
  File "manage.py", line 10, in <module>
    execute_from_command_line(sys.argv)
  File "/home/terryoy/.venv/django/local/lib/python2.7/site-packages/django/core/management/__init__.py", line 385, in execute_from_command_line
    utility.execute()
  File "/home/terryoy/.venv/django/local/lib/python2.7/site-packages/django/core/management/__init__.py", line 354, in execute
    django.setup()
  File "/home/terryoy/.venv/django/local/lib/python2.7/site-packages/django/__init__.py", line 21, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "/home/terryoy/.venv/django/local/lib/python2.7/site-packages/django/apps/registry.py", line 108, in populate
    app_config.import_models(all_models)
  File "/home/terryoy/.venv/django/local/lib/python2.7/site-packages/django/apps/config.py", line 202, in import_models
    self.models_module = import_module(models_module_name)
  File "/usr/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/terryoy/hackathons/garbage-trace/gbtrace/traceapp/models.py", line 33
    point_type = 
                ^
SyntaxError: invalid syntax
